# 0.00.25 (52329) May 23, 2011
Changed background to blue like geometric optics which reportedly worked well on Trish's projector
Increased font sizes and bolded the fonts to improve readability
Made the "remove sugar/salt" button yellow like the reset all button
Made control panel backgrounds white
Restored background to evaporation slider control
# 0.00.24 (52313) May 23, 2011
# 0.00.23 (52311) May 23, 2011
Removed gravity
Added periodic boundary conditions for position
# 0.00.22 (52292) May 21, 2011
Added developer controls
Added coulomb forces
Added sodium ions
Added SI coordinates and a transform to box2d coordinate frame
Added graphics for the beaker floor and walls
Added a reset button
Added random motion so water molecules continue moving
# 0.00.21 (52234) May 20, 2011
# 0.00.20 (52233) May 20, 2011
Added graphics from common/chemistry project
Added hydrogen and oxygen atoms to prototype
Started prototype for microscopic model
# 0.00.19 (52199) May 19, 2011
Limit to 100 grams of each solute
# 0.00.18 (52197) May 19, 2011
Increased font for "none" and "lots"
# 0.00.17 (52195) May 19, 2011
Changed grain sizes to 0.1 gram
# 0.00.16 (52192) May 19, 2011
Removed background from evaporation slider
Use a scaled cartoon size for the grains, since actual grain sizes would be much too large
Salt crystals immediately precipitate when put into an empty beaker, when they hit the bottom or land on other precipitate
Compute sugar and salt grain sizes based on size per solid precipitate
Made sugar and salt grains smaller weight, closer to physical grain sizes
Made the beaker stick up an additional 0.3 cm to accommodate expanded fluid volume due to dissolved solutes, so it won't overflow
Changed from 5g to 1g per grain of salt/sugar
# 0.00.15 (52161) May 18, 2011
Fixed: Underwater light bulb shouldn't light up (shorted out)
Moved "show values" button to a new control panel instead of in the concentration bar chart