@@ -3,3 +3,4 @@ project.depends.data=data
 project.depends.source=src
 project.depends.lib=piccolo-phet : jbox2d/jbox2d-2.0.1-library-only.jar : chemistry
 project.flavor.sugar-and-salt-solutions.mainclass=edu.colorado.phet.sugarandsaltsolutions.SugarAndSaltSolutionsApplication
+project.flavor.sugar-and-salt-solutions-combined-button.mainclass=edu.colorado.phet.sugarandsaltsolutions.SugarAndSaltSolutionsApplicationCombinedButton
